<resources>
    <string name="app_name">FoodAppMe</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="text_greeting">Hi, Ninda</string>
    <string name="text_greeting2">What do you want to eat today?</string>
    <string name="text_discount_30">Discount 30%</string>
    <string name="text_banner_desc">Order menu via app and get your discount</string>
    <string name="text_food_menu_list">Food menu list</string>
    <string name="text_cart">Cart</string>
    <string name="text_profile">Profile</string>
    <string name="text_location">Location</string>
    <string name="text_location_desc">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_btn_add_to_cart">Add to cart</string>
    <string name="text_add_notes_here">Add notes here</string>
    <string name="total_qty">x%s</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_total_price">Total price</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_order_confirmation">Order Confirmation</string>
    <string name="text_e_wallet">E Wallet</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_cash">Cash</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_shopping_summary">Shopping Summary</string>
    <string name="text_total_item_price">Total Item Price</string>
    <string name="text_order">Order</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_log_in">Log In</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_logout">Logout</string>
    <string name="text_change_password">Change password</string>
    <string name="text_password_doesn_t_match">Password doesn\'t match</string>
    <string name="text_password_cannot_less_than_8_character">Password cannot less than 8 character</string>
    <string name="text_rice">Rice</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_checkout_success">Checkout Success</string>
    <string name="text_okay">okay</string>
    <string name="text_add_to_cart_success">Add to cart success !</string>
    <string name="text_do_you_want_to_logout">Do you want to logout?</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_change_password_request_sent_to_your_email">Change Password request sent to your email</string>
    <string name="text_save_change">Save Change</string>
    <string name="app_settings">App Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="text_hi">Hi, %1$s !</string>

</resources>