<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--deliveryMethod-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_delivery_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_delivery_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_delivery_method"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/rg_delivery_method"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_primary_outline"
                    android:checkedButton="@+id/rb_delivery"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_pick_up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_background"
                        android:button="@null"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/text_pick_up"
                        android:textColor="@drawable/selector_toogle_text_color" />

                    <RadioButton
                        android:id="@+id/rb_delivery"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_background"
                        android:button="@null"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/text_delivery"
                        android:textColor="@drawable/selector_toogle_text_color" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--cartList-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/cv_section_checkout"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_cart_menu" />
        <!--paymentMethod-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_payment_method"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/rg_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_primary_outline"
                    android:checkedButton="@+id/rb_e_wallet"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_cash"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_background"
                        android:button="@null"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/text_cash"
                        android:textColor="@drawable/selector_toogle_text_color" />

                    <RadioButton
                        android:id="@+id/rb_e_wallet"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_background"
                        android:button="@null"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/text_e_wallet"
                        android:textColor="@drawable/selector_toogle_text_color" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--shoppingSummary-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_shopping_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_payment_method">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tv_title_shopping_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_shopping_summary"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_button_rounded_border_transparent"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_shopping_summary">

                    <TextView
                        android:id="@+id/tv_item_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/text_total_item_price" />

                    <TextView
                        android:id="@+id/tv_item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="textEnd"
                        tools:text="IDR 20.000.000" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>