<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.feature.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!--header-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_settings"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_more"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_settings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_greeting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/text_greeting"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="4dp"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center_vertical"
                            android:text="@string/text_greeting2"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--banner-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_header">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="140dp">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_banner" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.5"
                            android:background="@color/black" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/iv_discount"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/img_discount"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/iv_discount"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/tv_banner_desc"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginHorizontal="8dp"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/text_discount_30"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginHorizontal="8dp"
                                    android:fontFamily="@font/poppins_medium"
                                    android:text="@string/text_banner_desc"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <!--category-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/cv_banner"
                    tools:listitem="@layout/item_category_menu" />
                <!--titleListMenu-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_title_list_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_category">

                    <TextView
                        android:id="@+id/tv_title_list_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/text_food_menu_list"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_list_mode"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginHorizontal="16dp"
                        android:src="@drawable/ic_list"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--listMenu-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_title_list_menu"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_grid_list_menu"
                    tools:spanCount="2" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
